--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Run tests
         run: pytest
 
+      - name: Clean dist folder
+        run: rm -rf dist
+
       - name: Build Python package
         run: python -m build
 
