--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*.*.*"
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -12,6 +15,29 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install build
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run tests
+        run: pytest
 
       - name: Extract version from tag
         id: get_version
@@ -24,20 +50,6 @@ jobs:
         run: |
           VERSION=${{ steps.get_version.outputs.version }}
           sed -i "s/^version = \".*\"/version = \"$VERSION\"/" pyproject.toml
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install build
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: pytest
 
       - name: Clean dist folder
         run: rm -rf dist
